<resources>
    <string name="app_name">AsturSpots</string>
    <string name="drawer_open">Abrir menú</string>
    <string name="drawer_close">Cerrar menú</string>

    <string name="menu_historia">Historia</string>
    <string name="menu_gastronomia">Gastronomía</string>
    <string name="menu_turismo">Turismo</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="correo_electronico_login">Correo electrónico</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="iniciar_sesion_login">Iniciar sesión</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="invitado_login">Entrar sin iniciar sesión</string>
    <string name="fab_mapa">Ver en mapa</string>


</resources>
