<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/baseline_home_24"
            android:title="Inicio" />
        <item
            android:id="@+id/historiaFragment"
            android:icon="@drawable/baseline_account_balance_24"
            android:title="@string/menu_historia" />

        <item
            android:id="@+id/gastronomiaFragment"
            android:icon="@drawable/baseline_dining_24"
            android:title="@string/menu_gastronomia" />

        <item
            android:id="@+id/turismoFragment"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_turismo" />

        <item
            android:id="@+id/eventosFragment"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_eventos" />

        <item
            android:id="@+id/favoritosFragment"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_favoritos" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/inicioSesionActivity"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_cerrar_sesion" />

    </group>

</menu>
