<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.AuthActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="32dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green"/>

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/correo_electronico_login"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="#141414" />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:hint="@string/contraseña_login"
                android:singleLine = "true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:textColorHint="#141414"
                android:drawablePadding="8dp"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion_login"
                android:textSize="15sp"
                android:backgroundTint="@color/green"
                android:layout_marginTop="35dp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarse_login"
                android:textSize="15sp"
                android:backgroundTint="@color/green"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/guestButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invitado_login"
                android:textSize="15sp"
                android:backgroundTint="@color/green"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>